--- a/build.yaml
+++ b/build.yaml
@@ -17,3 +17,5 @@ include:
     shield: tbk_mini_left
   - board: nrfmicro_13
     shield: tbk_mini_right
+  - board: nrfmicro_13
+    shield: settings_reset
