--- a/config/boards/shields/tbk_mini/tbk_mini.dtsi
+++ b/config/boards/shields/tbk_mini/tbk_mini.dtsi
@@ -28,52 +28,18 @@ RC(2,0) RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)  RC(2,6)  RC(2,7) RC(2,8) RC(2,9
 		>;
 	};
 
-	kscan0: kscan {
-		compatible = "zmk,kscan-gpio-matrix";
-		label = "KSCAN";
+	 kscan0: kscan {
+        compatible = "zmk,kscan-gpio-matrix";
+        label = "KSCAN";
 
-		diode-direction = "row2col";
-
-		// row-gpios
-		// 	= <&pro_micro 4 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
-		// 	, <&pro_micro 5 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
-		// 	, <&pro_micro 6 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
-		// 	, <&pro_micro 7 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
-		// 	;
-		// row-gpios
-		// 	= <&gpio1 6  GPIO_ACTIVE_HIGH>  // B5
-		// 	, <&gpio0 2  GPIO_ACTIVE_HIGH>  // F7
-		// 	, <&gpio0 29 GPIO_ACTIVE_HIGH>  // F6
-		// 	, <&gpio1 11 GPIO_ACTIVE_HIGH>  // B6
-		// 	;
-		row-gpios
-			= <&gpio1 11 GPIO_ACTIVE_HIGH>
-			, <&gpio0 13 GPIO_ACTIVE_HIGH>
-			, <&gpio0 20 GPIO_ACTIVE_HIGH>
-			, <&gpio1 6  GPIO_ACTIVE_HIGH>
-			;
-		
-	};
+        diode-direction = "row2col";
+        row-gpios
+            = <&pro_micro 18 (GPIO_ACTIVE_HIGH)>
+            , <&pro_micro 5 (GPIO_ACTIVE_HIGH)>
+            , <&pro_micro 4 (GPIO_ACTIVE_HIGH)>
+            , <&pro_micro 9 (GPIO_ACTIVE_HIGH)>
+            ;
+    };
 
 	// TODO: per-key RGB node(s)?
-};
-
-&pro_micro_i2c {
-	status = "okay";
-
-	oled: ssd1306@3c {
-		compatible = "solomon,ssd1306fb";
-		reg = <0x3c>;
-		label = "DISPLAY";
-		width = <128>;
-		height = <32>;
-		segment-offset = <0>;
-		page-offset = <0>;
-		display-offset = <0>;
-		multiplex-ratio = <31>;
-		segment-remap;
-		com-invdir;
-		com-sequential;
-		prechargep = <0x22>;
-	};
 };
