--- a/build.yaml
+++ b/build.yaml
@@ -13,9 +13,9 @@
 #
 ---
 include:
-  - board: nrfmicro_13
+  - board: nice_nano_v2
     shield: tbk_mini_left
-  - board: nrfmicro_13
+  - board: nice_nano_v2
     shield: tbk_mini_right
-  - board: nrfmicro_13
+  - board: nice_nano_v2
     shield: settings_reset
