--- a/build.yaml
+++ b/build.yaml
@@ -14,8 +14,13 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: tbk_mini_left
+    shield: zero46_left
+
   - board: nice_nano_v2
-    shield: tbk_mini_right
+    shield: zero46_right
+
   - board: nice_nano_v2
-    shield: settings_reset
+    shield: zero46_central_dongle
+    
+  - board: nice_nano_v2
+    shield: zero46_central_left
