--- a/build.yaml
+++ b/build.yaml
@@ -21,6 +21,11 @@ include:
 
   - board: nice_nano_v2
     shield: zero46_central_dongle
+    snippet: studio-rpc-usb-uart
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
     
   - board: nice_nano_v2
     shield: zero46_central_left
+    snippet: studio-rpc-usb-uart
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
+    
