--- a/config/zero46.conf
+++ b/config/zero46.conf
@@ -27,3 +27,8 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
 
 # 用于解决 Windows 中与电池报告相关的错误
 CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
+
+# ZMK STUDIO
+CONFIG_ZMK_STUDIO=y
+CONFIG_ZMK_STUDIO_LOCKING=n
+CONFIG_ZMK_STUDIO_LOCK_ON_DISCONNECT=n
