--- a/config/boards/shields/zero46/zero46_central_dongle.conf
+++ b/config/boards/shields/zero46/zero46_central_dongle.conf
@@ -38,4 +38,7 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
 CONFIG_BT_MAX_CONN=5
 CONFIG_BT_MAX_PAIRED=5
 
+# ZMK STUDIO
 CONFIG_ZMK_STUDIO=y
+CONFIG_ZMK_STUDIO_LOCKING=n
+CONFIG_ZMK_STUDIO_LOCK_ON_DISCONNECT=n
